TEXT CHANGES AND BANNER IMAGE CHANGES

--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
 <!-- Slider Section -->
 <div class="tp-banner-container" id="slider">
   <div class="tp-banner" >
-    <ul>      
-      <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/home-bg.jpg">
-        <div class="caption lfb large-title tp-resizeme slidertext2" data-x="center" data-y="280" data-speed="600" data-start="1000">Drive your dream car at your price</div>
+    <ul>
+      <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/banner2.jpg">
+        <div class="caption lfb large-title tp-resizeme slidertext2" data-x="center" data-y="280" data-speed="600" data-start="1000">Drive your own price</div>
         <div class="caption lfb large-title tp-resizeme slidertext1" data-x="center" data-y="310" data-speed="600" data-start="1600">Welcome to <span>belowmsrp</span></div>
         <div class="caption lfb large-title tp-resizeme sliderbtn" data-x="center" data-y="400" data-speed="600" data-start="2200"><a href="http://app.belowmsrp.com/login" class="section-btn">Get Started</a></div>
       </li>
-      <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/banner2.jpg">
-        <div class="caption lfb large-title tp-resizeme slidertext2" data-x="center" data-y="280" data-speed="600" data-start="1000">Our cars offers value for money, comfort and dependability.</div>
+      <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/home-bg.jpg">
+        <div class="caption lfb large-title tp-resizeme slidertext2" data-x="center" data-y="280" data-speed="600" data-start="1000">NO HAGGLING. No SALESMAN. NEGOTIATE YOUR DEAL.</div>
         <div class="caption lfb large-title tp-resizeme slidertext1" data-x="center" data-y="310" data-speed="600" data-start="1600">Book Your <span>Dream Car</span> Today</div>
         <div class="caption lfb large-title tp-resizeme sliderbtn" data-x="center" data-y="400" data-speed="600" data-start="2200"><a href="http://app.belowmsrp.com/login" class="section-btn">Get Started</a></div>
       </li>
+      
     </ul>
   </div>
 </div>
@@ -115,7 +116,7 @@
 <div class="taglinewrap" id="taglinewrap">
   <div class="container">
     <h2>Get Started Today</h2>
-    <p>You are just few steps away from getting your dream car at the lowest possible price...!</p>
+    <p>You are only a few steps away from getting your new car at the lowest price in America...</p>
     <a href="http://app.belowmsrp.com">Purchase Now <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a> </div>
 </div>
 
