--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
   <!-- Counter Section -->
-  <div id="counter">
+  <div id="" style="padding: 60px 0">
     <div class="container">
       <div class="col-md-12" style="color: black;">
         <div class="text-center spacing-2">
@@ -518,6 +518,35 @@
       </div>
     </div>
   </div>
+
+
+<!-- Counter Section -->
+<div id="counter">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-3 col-xs-12 counter-item">
+        <!-- <div class="counterbox">
+          <div class="counter-icon"><i class="fa fa-users" aria-hidden="true"></i></div>
+          <span class="counter-number" data-from="1" data-to="499" data-speed="1000"></span> <span class="counter-text">Happy Client</span> </div> -->
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-12 counter-item">
+        <div class="counterbox">
+          <div class="counter-icon"><i class="fa fa-car" aria-hidden="true"></i></i></div>
+          <span class="counter-number" data-from="1" data-to="199021" data-speed="2000"></span> <span class="counter-text">Cars Sold</span> </div>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-12 counter-item">
+        <div class="counterbox">
+          <div class="counter-icon"><i class="fa fa-map-signs" aria-hidden="true"></i></div>
+          <span class="counter-number" data-from="1" data-to="5072" data-speed="3000"></span> <span class="counter-text">Dealerships</span> </div>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-12 counter-item">
+        <!-- <div class="counterbox">
+          <div class="counter-icon"><i class="fa fa-trophy" aria-hidden="true"></i></div>
+          <span class="counter-number" data-from="1" data-to="199" data-speed="4000"></span> <span class="counter-text">Awards</span> </div> -->
+      </div>
+    </div>
+  </div>
+</div>
 
 
   <!-- Tagline Section -->
