image and text updates

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="tp-banner">
       <ul>
         <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt=""
-            src="images/dummy.png" data-lazyload="images/banner2.jpg">
+            src="images/dummy.png" data-lazyload="images/home-bg.jpg">
           <div class="caption lfb large-title tp-resizeme slidertext2" data-x="center" data-y="280" data-speed="600"
             data-start="1000">Drive your own price</div>
           <div class="caption lfb large-title tp-resizeme slidertext1" data-x="center" data-y="310" data-speed="600"
@@ -80,11 +80,11 @@
             data-start="2200"><a href="http://app.belowmsrp.com/login" class="section-btn">Get Started</a></div>
         </li>
         <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt=""
-            src="images/dummy.png" data-lazyload="images/home-bg.jpg">
+            src="images/dummy.png" data-lazyload="images/banner2.jpg">
           <div class="caption lfb large-title tp-resizeme slidertext2" data-x="center" data-y="280" data-speed="600"
             data-start="1000">NO HAGGLING. No SALESMAN. NEGOTIATE YOUR DEAL.</div>
           <div class="caption lfb large-title tp-resizeme slidertext1" data-x="center" data-y="310" data-speed="600"
-            data-start="1600">Book Your <span>Dream Car</span> Today</div>
+            data-start="1600">Book Your <span>New Car</span> Today</div>
           <div class="caption lfb large-title tp-resizeme sliderbtn" data-x="center" data-y="400" data-speed="600"
             data-start="2200"><a href="http://app.belowmsrp.com/login" class="section-btn">Get Started</a></div>
         </li>
