--- a/public/index.html
+++ b/public/index.html
@@ -569,7 +569,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12">
           <div class="footer-copyright">
-            <p id="footer-text">&copy; 2022 belowmsrp | All Rights Reserved.</p>
+            <p id="footer-text">&copy; 2024 Notsticker | All Rights Reserved.</p>
           </div>
         </div>
       </div>
