--- a/public/index.html
+++ b/public/index.html
@@ -403,8 +403,8 @@
                 <div class="col-md-12">
                   <div class="image-section">
                     <img class="picture-inner"
-                      src="https://static.tcimg.net/vehicles/logo/64x64_full_color/1883c8e25ce09640/Jeep.png?h=30&amp;w=30"
-                      srcset="https://static.tcimg.net/vehicles/logo/64x64_full_color/1883c8e25ce09640/Jeep.png?h=30&amp;w=30 1x, https://static.tcimg.net/vehicles/logo/64x64_full_color/1883c8e25ce09640/Jeep.png?h=30&amp;w=30 2x"
+                      src="./images/kia.jpg"
+                      srcset="./images/kia.jpg 1x, ./images/kia.jpg 2x"
                       alt="New Kia Models">
                   </div>
                   <div style="float: left; padding: 1% 0% 0% 15%;">Kia</div>
