--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Notsticker</title>
+  <title>Below Msrp</title>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -51,14 +51,14 @@
             class="icon icon-bar"></span> <span class="icon icon-bar"></span> <span class="icon icon-bar"></span>
         </button>
         <!-- lOGO TEXT HERE -->
-        <a href="index.html" class="navbar-brand">Notsticker</a>
+        <a href="index.html" class="navbar-brand">Below Msrp</a>
       </div>
 
       <!-- NAVIGATION LINKS -->
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="http://app.notsticker.com/login" class="smoothScroll">Login</a></li>
-          <li><a href="http://app.notsticker.com/signup" class="smoothScroll">Signup</a></li>
+          <li><a href="http://app.below-msrp.com/login" class="smoothScroll">Login</a></li>
+          <li><a href="http://app.below-msrp.com/signup" class="smoothScroll">Signup</a></li>
           <!-- <li><span class="calltxt"><i class="fa fa-phone" aria-hidden="true"></i> 123 456 7890</span></li> -->
         </ul>
       </div>
@@ -76,7 +76,7 @@
           <div class="caption lfb large-title tp-resizeme slidertext1" data-x="center" data-y="310" data-speed="600"
             data-start="1600">Welcome to <span>belowmsrp</span></div>
           <div class="caption lfb large-title tp-resizeme sliderbtn" data-x="center" data-y="400" data-speed="600"
-            data-start="2200"><a href="http://app.notsticker.com/login" class="section-btn">Get Started</a></div>
+            data-start="2200"><a href="http://app.below-msrp.com/login" class="section-btn">Get Started</a></div>
         </li> -->
         <li data-slotamount="7" data-transition="fade" data-masterspeed="1000" data-saveperformance="on"> <img alt=""
             src="images/dummy.png" data-lazyload="images/below_msrp_background.jpeg">
@@ -85,7 +85,7 @@
           <div class="caption lfb large-title tp-resizeme slidertext1" id="texttwo" data-x="center" data-y="310" data-speed="600"
             data-start="1600">Buy Your <span id="new-car">New Car</span> Now</div>
           <div class="caption lfb large-title tp-resizeme sliderbtn" id="textthree" data-x="center" data-y="400" data-speed="600"
-            data-start="2200"><a href="http://app.notsticker.com/login" class="section-btn get-started">Get Started</a></div>
+            data-start="2200"><a href="http://app.below-msrp.com/login" class="section-btn get-started">Get Started</a></div>
         </li>
 
       </ul>
@@ -553,7 +553,7 @@
     <div class="container">
       <h2>Get Started Today</h2>
       <p>You are only a few steps away from getting your new car at the lowest price in America...</p>
-      <a href="http://app.notsticker.com">Purchase Now <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+      <a href="http://app.below-msrp.com">Purchase Now <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </div>
   </div>
 
@@ -569,7 +569,7 @@
       <div class="row">
         <div class="col-md-12 col-sm-12">
           <div class="footer-copyright">
-            <p id="footer-text">&copy; 2025 Notsticker | All Rights Reserved.</p>
+            <p id="footer-text">&copy; 2025 Below Msrp | All Rights Reserved.</p>
           </div>
         </div>
       </div>
